[C-3006][C-3005] Fix tag field wrapping (#3947)

--- a/apps/audius-client/packages/web/src/components/data-entry/DropdownInput.module.css
+++ b/apps/audius-client/packages/web/src/components/data-entry/DropdownInput.module.css
@@ -145,10 +145,7 @@
 }
 
 .arrow {
-  position: absolute;
-  top: 50%;
-  right: 16px;
-  transform: translateY(-50%);
+  margin-right: 4px;
   height: 6px;
   width: 10px;
   cursor: pointer;
