--- a/apps/audius-client/packages/web/src/components/layout/layout.module.css
+++ b/apps/audius-client/packages/web/src/components/layout/layout.module.css
@@ -27,3 +27,7 @@
 .gap6 {
   gap: var(--unit-6);
 }
+
+.gapAuto {
+  justify-content: space-between;
+}
