--- a/apps/audius-client/packages/web/src/pages/upload-page/fields/TrackMetadataFields.module.css
+++ b/apps/audius-client/packages/web/src/pages/upload-page/fields/TrackMetadataFields.module.css
@@ -1,39 +1,8 @@
-.basic {
-  display: flex;
-  flex-wrap: wrap;
+.metadataFields {
+  flex-grow: 1;
+  height: 100%;
 }
 
-.artwork {
-  margin-right: var(--unit-6);
-  padding-bottom: var(--unit-4);
-}
-
-.fields {
-  flex: 1 auto;
-  min-width: 335px;
-}
-
-.fields > div {
-  margin-bottom: var(--unit-4);
-}
-
-.fields > div.description > .textArea > textarea {
-  min-height: 90px;
-}
-
-.fields > div.description {
-  margin-bottom: var(--unit-4);
-}
-
-.categorization {
-  display: flex;
-  align-items: flex-start;
-}
-
-.categorization > div {
-  flex: 1 auto;
-}
-
-.categorization > div:first-child {
-  margin-right: var(--unit-2);
+.topRow {
+  height: 218px;
 }
